--- a/practice_index.html
+++ b/practice_index.html
@@ -6,30 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>首頁</title>
-  <style>
-
-    .homepage__sidebar {
-      background-color: #3c3c3c;
-      width: 250px;
-      color: aliceblue;
-      list-style: none;
-      list-style-type: none;
-      padding: 0;
-      text-align: center;
-    }
-
-    .homepage__sidebar-item {
-      height: 40px;
-      padding: 10px;
-      box-sizing: border-box;
-      cursor: pointer;
-    } 
-
-    .homepage__sidebar-item:hover{
-      border-left: 3px solid red;
-    }
-
-  </style>
+  <link rel="stylesheet" href="practice_index.css">
 </head>
 
 <body>
