--- a/practice_index.html
+++ b/practice_index.html
@@ -12,7 +12,7 @@
 <body>
   <ul class="homepage__sidebar">
     <li class="homepage__sidebar-item">
-      <a>Lorem ipsum dolor sit amet.</a>
+      Lorem ipsum dolor sit amet.
     </li>
     <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
     <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
@@ -24,6 +24,27 @@
     <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
     <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
   </ul>
+  <div class="super_brand">
+    <div class="top">
+      <img src="	https://event.shopping.friday.tw/event/homepage/images/index-icons/super-week.svg" alt="">
+      <span>超級品牌</span>
+    </div>
+    <div class="down">
+      <div class="hompage__items">
+        <div class="homepage__left">
+          <div class="lookMore">
+            看更多
+          </div>
+          <img class="logo" src="" alt="">
+          <div class="mask"></div>
+        </div>
+        <div class="homepage__right"></div>
+        <div class="homepage__right"></div>
+      </div>
+      <div class="hompage__items"></div>
+    </div>
+
+  </div>
 </body>
 
 </html>
