--- a/practice_index.html
+++ b/practice_index.html
@@ -11,37 +11,41 @@
 
 <body>
   <ul class="homepage__sidebar">
-    <li class="homepage__sidebar-item">
-      Lorem ipsum dolor sit amet.
-    </li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
-    <li class="homepage__sidebar-item">Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
+    <li>Lorem ipsum dolor sit amet.</li>
   </ul>
-  <div class="super_brand">
-    <div class="top">
+  <div class="superbrand">
+    <div class="superbrand_title">
       <img src="	https://event.shopping.friday.tw/event/homepage/images/index-icons/super-week.svg" alt="">
       <span>超級品牌</span>
     </div>
-    <div class="down">
-      <div class="hompage__items">
-        <div class="homepage__left">
-          <div class="lookMore">
-            看更多
+    <div class="superbrand_conteniner">
+      <div class="supbrand_box">
+        <div class="superbrand_items">
+          <div class="superbrand_mainpic">
+            <div class="lookMore">
+              看更多
+              <span></span>
+            </div>
+            <img class="logo" src="https://fakeimg.pl/300/" alt="">
+            <div class="mask">
+              <p>brandName</p>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
           </div>
-          <img class="logo" src="" alt="">
-          <div class="mask"></div>
+          <div class="superbrand_item"></div>
+          <div class="superbrand_item"></div>
         </div>
-        <div class="homepage__right"></div>
-        <div class="homepage__right"></div>
       </div>
-      <div class="hompage__items"></div>
+      <div class="superbrand_items"></div>
     </div>
 
   </div>
