--- a/practice_index.html
+++ b/practice_index.html
@@ -10,44 +10,78 @@
 </head>
 
 <body>
-  <ul class="homepage__sidebar">
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-    <li>Lorem ipsum dolor sit amet.</li>
-  </ul>
-  <div class="superbrand">
-    <div class="superbrand_title">
-      <img src="	https://event.shopping.friday.tw/event/homepage/images/index-icons/super-week.svg" alt="">
-      <span>超級品牌</span>
-    </div>
-    <div class="superbrand_conteniner">
-      <div class="supbrand_box">
-        <div class="superbrand_items">
-          <div class="superbrand_mainpic">
-            <div class="lookMore">
-              看更多
-              <span></span>
+  <div class="homepage">
+    <ul class="homepage__sidebar">
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+    </ul>
+    <div class="superbrand">
+      <div class="superbrand_title">
+        <img src="	https://event.shopping.friday.tw/event/homepage/images/index-icons/super-week.svg" alt="">
+        <span>超級品牌</span>
+      </div>
+      <div class="superbrand_conteniner">
+        <div class="superbrand_box">
+          <div class="superbrand_items">
+            <div class="superbrand_mainpic">
+              <div class="lookMore">
+                看更多
+                <span></span>
+              </div>
+              <img class="logo" src="https://fakeimg.pl/300/" alt="">
+              <div class="mask">
+                <p>brandName</p>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
             </div>
-            <img class="logo" src="https://fakeimg.pl/300/" alt="">
-            <div class="mask">
-              <p>brandName</p>
-              <p>Lorem ipsum dolor sit.</p>
+            <div class="superbrand_item">
+              <img src="https://fakeimg.pl/300/" alt="">
+              <p class="productName">Lorem ipsum dolor sit amdsfghjet consectetur.</p>
+              <p class="price">2,380</p>
             </div>
+            <div class="superbrand_item">
+              <img src="https://fakeimg.pl/300/" alt="">
+              <p class="productName">Lorem ipsum dolor sit amdsfghjet consectetur.</p>
+              <p class="price">2,380</p>
+            </div>
+
           </div>
-          <div class="superbrand_item"></div>
-          <div class="superbrand_item"></div>
+        </div>
+        <div class="supbrand_box">
+          <div class="superbrand_items">
+            <div class="superbrand_mainpic">
+              <div class="lookMore">
+                看更多
+                <span></span>
+              </div>
+              <img class="logo" src="https://fakeimg.pl/300/" alt="">
+              <div class="mask">
+                <p>brandName</p>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <div class="superbrand_item">
+              <img src="https://fakeimg.pl/300/" alt="">
+              <p class="productName">Lorem ipsum dolor sit amdsfghjet consectetur.</p>
+              <p class="price">2,380</p>
+            </div>
+            <div class="superbrand_item">
+              <img src="https://fakeimg.pl/300/" alt="">
+              <p class="productName">Lorem ipsum dolor sit amdsfghjet consectetur.</p>
+              <p class="price">2,380</p>
+            </div>          
+          </div>
         </div>
       </div>
-      <div class="superbrand_items"></div>
     </div>
-
   </div>
 </body>
 
