--- a/practice_index.html
+++ b/practice_index.html
@@ -52,10 +52,9 @@
               <p class="productName">Lorem ipsum dolor sit amdsfghjet consectetur.</p>
               <p class="price">2,380</p>
             </div>
-
           </div>
         </div>
-        <div class="supbrand_box">
+        <div class="superbrand_box">
           <div class="superbrand_items">
             <div class="superbrand_mainpic">
               <div class="lookMore">
