--- a/fridayHomepage.html
+++ b/fridayHomepage.html
@@ -26,6 +26,20 @@
 				<li>Impedit, magnam facilis!</li>
 			</ul>
 		</div>
+		<div class="homepage_left">
+			<ul>
+				<li>Lorem, ipsum dolor.</li>
+				<li>Aliquam, animi rerum.</li>
+				<li>Impedit, totam dolor?</li>
+				<li>Id, ea corporis.</li>
+				<li>Laudantium, est dicta.</li>
+				<li>Dolores, asperiores doloribus!</li>
+				<li>Quibusdam, non accusamus.</li>
+				<li>Voluptatum, praesentium saepe.</li>
+				<li>Iste, nisi cupiditate.</li>
+				<li>Impedit, magnam facilis!</li>
+			</ul>
+		</div>
 		<div class="homepage_right">
 			<div class="superbrand">
 				<img class="icon" src="https://event.shopping.friday.tw/event/homepage/images/index-icons/super-week.svg"
